@@ -30,7 +30,6 @@ import com.watabou.utils.Callback;
 import com.watabou.utils.PointF;
 import com.watabou.utils.Random;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Lightning extends Group {
@@ -39,24 +38,24 @@ public class Lightning extends Group {
 	
 	private float life;
 
-	private List<Arc> arcs;
+	private final List<Arc> arcs;
 	
-	private Callback callback;
+	private final Callback callback;
 
 	public Lightning(int from, int to, Callback callback){
-		this(Arrays.asList(new Arc(from, to)), callback);
+		this(List.of(new Arc(from, to)), callback);
 	}
 
 	public Lightning(PointF from, int to, Callback callback){
-		this(Arrays.asList(new Arc(from, to)), callback);
+		this(List.of(new Arc(from, to)), callback);
 	}
 
 	public Lightning(int from, PointF to, Callback callback){
-		this(Arrays.asList(new Arc(from, to)), callback);
+		this(List.of(new Arc(from, to)), callback);
 	}
 
 	public Lightning(PointF from, PointF to, Callback callback){
-		this(Arrays.asList(new Arc(from, to)), callback);
+		this(List.of(new Arc(from, to)), callback);
 	}
 	
 	public Lightning( List<Arc> arcs, Callback callback ) {
@@ -106,10 +105,12 @@ public class Lightning extends Group {
 	//these act as a means of easily expressing lighting between two points.
 	public static class Arc extends Group {
 
-		private Image arc1, arc2;
+		private final Image arc1;
+        private final Image arc2;
 
 		//starting and ending x/y values
-		private PointF start, end;
+		private final PointF start;
+        private final PointF end;
 
 		public Arc(int from, int to){
 			this( DungeonTilemap.tileCenterToWorld(from),
